# pgtune

./: CMakeLists.txt  README.rst  pg_settings-9.5-64  pg_settings-9.6-64  pgtune  postgresql.conf.9.5-with_logging
